refactor: Use parameterised tests in ConformanceProviderTest
Consolidate duplicated test code using JUnit 5 @ParameterizedTest with
@MethodSource. This reduces 12 individual tests to 4 parameterised tests
while maintaining the same 19 test cases.

Groups consolidated:
- ViewDefinition interaction tests (CREATE, DELETE)
- Disabled CRUD interaction tests (CREATE, READ, SEARCHTYPE, DELETE)
- Disabled system operation tests (export, import, viewdefinition-run)
- Disabled resource operation tests (ViewDefinition/run, Patient/export,
  Group/export)